Fix layout issue in React sample app.

--- a/react-sample-app/src/App.css
+++ b/react-sample-app/src/App.css
@@ -166,7 +166,7 @@ body {
 }
 
 .App-video-container .video-container.hidden {
-    display: block;
+    z-index: 0;
 }
 
 .App-video-container .video-container.active-gt2 {
@@ -178,7 +178,7 @@ body {
 }
 
 .App-video-container .video-container.active-gt2.hidden {
-   display: block;
+    z-index: 0;
 }
 
 .App-video-container .video-container.active-gt2 .OT_subscriber {
